--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,12 @@
 
         </LinearLayout>
 
+        <Button
+            android:id="@+id/btnShowUnionList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Show list" />
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycle_view"
             android:layout_width="match_parent"
