--- a/app/src/main/res/layout/union_list_item.xml
+++ b/app/src/main/res/layout/union_list_item.xml
@@ -1,6 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/text_relative_layout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="12dp">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/unionListUserId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:text="UserID"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/unionListTextBody"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/unionListUserId"
+        android:text="Text body" />
+
+    <TextView
+        android:id="@+id/unionListImageURL"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/unionListTextBody"
+        android:text="Image URL"
+        android:textStyle="italic"/>
+
+</RelativeLayout>
